--- a/style.css
+++ b/style.css
@@ -14,14 +14,13 @@ body {
     padding: 2rem;
     border-radius: 2rem;
     box-shadow: 2px 2px 10px black;
-    height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 4rem 2rem 2rem 2rem 1fr;
+    grid-template-rows: 4rem 2rem 2rem 2rem 1fr 2rem;
+    row-gap: 2rem;
 }
 
 .root > * {
-    outline: 1px solid red;
 }
 
 .root > h1 {
@@ -31,6 +30,10 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 2rem;
+}
+
+.root > h2 {
+    text-align: center;
 }
 
 .root > h1 > img {
@@ -51,10 +54,32 @@ body {
     grid-template-columns: 1fr 2rem 1fr 2rem;
     justify-content: space-between;
     align-items: center;
+    background-color: rgb(203, 253, 185);
+    gap: 4rem;
 }
 
 .display {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
+    background-color: aliceblue;
+    padding: 1rem 2rem;
+}
+
+.player-choice,
+.computer-choice {
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player-image,
+.computer-image {
+    width: 16rem;
+    height: 16rem;
+}
+
+.game-result {
+    text-align: center;
 }
