--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
     background-color: green;
 }
+
 .root {
     margin: 2rem 20%;
     background-color: white;
@@ -15,12 +16,9 @@ body {
     border-radius: 2rem;
     box-shadow: 2px 2px 10px black;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: 4rem 2rem 2rem 2rem 1fr 2rem;
     row-gap: 2rem;
-}
-
-.root > * {
 }
 
 .root > h1 {
@@ -74,10 +72,19 @@ body {
     align-items: center;
 }
 
+.img-div {
+    width: 10rem;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .player-image,
 .computer-image {
-    width: 16rem;
-    height: 16rem;
+    width: 100%;
+
+    aspect-ratio: 1 / 1;
 }
 
 .game-result {
