--- a/style.css
+++ b/style.css
@@ -6,11 +6,19 @@
 }
 
 body {
-    background-color: green;
+    height: 100vh;
+    width: 100%;
+    background: url("classroom.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .root {
-    margin: 2rem 20%;
+    width: 50%;
     background-color: white;
     padding: 2rem;
     border-radius: 2rem;
@@ -48,6 +56,7 @@ body {
 }
 
 .score-container {
+    /* margin: 2rem 20%; */
     display: grid;
     grid-template-columns: 1fr 2rem 1fr 2rem;
     justify-content: space-between;
@@ -91,4 +100,22 @@ body {
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
+}
+
+.round-over-message-container {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.round-over-message {
+    opacity: 90%;
+    width: 60%;
+    height: 90%;
+    padding: 4rem;
+    border-radius: 20px;
+    background-color: white;
 }
