--- a/style.css
+++ b/style.css
@@ -22,47 +22,86 @@ body {
     background-color: white;
     padding: 2rem;
     border-radius: 2rem;
-    box-shadow: 2px 2px 10px black;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 4rem 2rem 2rem 2rem 1fr 2rem;
-    row-gap: 2rem;
-}
-
-.root > h1 {
-    justify-self: center;
-    align-self: center;
+    box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.25);
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
 }
 
-.root > h2 {
-    text-align: center;
+header {
+    display: grid;
+    grid-template-columns: 5rem 1fr;
+    grid-template-rows: 2.5rem 2.5rem;
+    column-gap: 0.5rem;
+    align-items: center;
 }
 
-.root > h1 > img {
-    width: 4rem;
+header #logo {
+    width: 100%;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+header h1 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+header h2 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
 }
 
 .playerChoices {
     display: flex;
-    width: 100%;
+    width: 80%;
+    gap: 1rem;
 }
 
 .playerChoices > button {
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 2px solid;
     flex-grow: 1;
+
+    border-radius: 16px;
+    background-color: rgb(255, 173, 79);
+    color: white;
+
+    transition: background-color 200ms ease;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.playerChoices > button > img {
+    height: 2rem;
+}
+
+.playerChoices > button:hover {
+    background-color: rgb(255, 187, 109);
 }
 
 .score-container {
-    /* margin: 2rem 20%; */
+    width: 80%;
     display: grid;
-    grid-template-columns: 1fr 2rem 1fr 2rem;
+    grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(203, 253, 185);
-    gap: 4rem;
+    background-color: rgb(90, 194, 255);
+    border: 2px solid rgb(90, 194, 255);
+    color: rgb(90, 194, 255);
+    gap: 2px;
+}
+
+.score-container > * {
+    background-color: white;
+    padding: 0.5rem 1rem;
+    text-align: center;
 }
 
 .display {
@@ -70,19 +109,29 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     background-color: aliceblue;
-    padding: 1rem 2rem;
+}
+
+.player-choice {
+    border-right: 4px solid rgb(255, 255, 255);
 }
 
 .player-choice,
 .computer-choice {
-    /* background-color: red; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 1rem 2rem;
+}
+
+.player-choice p,
+.computer-choice p {
+    font-size: 1rem;
+    font-weight: normal;
+    text-transform: uppercase;
 }
 
 .img-div {
-    width: 10rem;
+    width: 15rem;
     padding: 2rem;
     display: flex;
     justify-content: center;
@@ -97,25 +146,76 @@ body {
 }
 
 .game-result {
-    text-align: center;
+    width: 20rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 200;
+    background-color: rgb(255, 241, 221);
+    color: rgb(0, 0, 0);
+    border-radius: 20px;
 }
 
-.round-over-message-container {
+.game-over-message-container {
     position: fixed;
     width: 100%;
     height: 100vh;
     justify-content: center;
     align-items: center;
     display: none;
+    backdrop-filter: blur(20px);
 }
 
-.round-over-message {
+.game-over-message {
     opacity: 90%;
-    width: 60%;
-    height: 90%;
+    /* width: 60%; */
     padding: 4rem;
     border-radius: 20px;
+    background-color: rgb(255, 255, 255);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.game-over-message h1 {
+    font-size: 3rem;
+}
+
+.--message-game-result {
+    font-size: 2rem;
+    position: relative;
+    padding-inline: 1rem;
+}
+
+.--message-game-result::after {
+    content: " ";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 70%;
+    background-color: rgb(255, 255, 112);
+
+    top: 0.5rem;
+    left: 0;
+
+    z-index: -1;
+}
+
+.replay-button {
+    border: 2px solid rgb(51, 139, 255);
+    font-size: 1rem;
+    padding: 0.5rem 2rem;
+    border-radius: 16px;
+    color: rgb(51, 139, 255);
     background-color: white;
+}
+
+.replay-button:hover {
+    background-color: rgb(51, 139, 255);
+    color: white;
 }
